[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["gushiii <zrjie001@gmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
